[gd_scene load_steps=5 format=2]

[ext_resource path="res://charecters/players/steve.gd" type="Script" id=1]
[ext_resource path="res://charecters/players/steve_sprite_frames.tres" type="SpriteFrames" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0
height = 7.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.89248
height = 5.99992

[node name="steve" type="KinematicBody2D"]
position = Vector2( 0, 8 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "squat_idle"
playing = true

[node name="CxnShp2D_Stand" type="CollisionShape2D" parent="."]
position = Vector2( 3.8147e-06, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -24, 0 )

[node name="CxnShp2D_Squat" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
rotation = 1.59699
shape = SubResource( 2 )
disabled = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
